--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "chalk": "^5.6.2",
     "commander": "^14.0.2",
     "inquirer": "^13.0.1"
   }
